Add DLL, JSON and PDB files for project dependencies

--- a/ASP.NET5/ASP.NET5.csproj
+++ b/ASP.NET5/ASP.NET5.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASP.NET5.Models\ASP.NET5.Models.csproj" />
+  </ItemGroup>
+
 </Project>
