Add index.html for .NET UseDefaultFiles Method testing

--- a/ASP.NET5/ASP.NET5.csproj
+++ b/ASP.NET5/ASP.NET5.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-ASP.NET5-FA7522D5-13A0-4AC6-8AA6-54A011815EA4</UserSecretsId>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
